[project]
name = "floods-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dask>=2025.10.0",
    "datasets>=4.3.0",
    "geojson>=3.2.0",
    "geopandas>=1.1.1",
    "hf-xet>=1.2.0",
    "imageio[ffmpeg,pyav]>=2.37.0",
    "matplotlib>=3.10.7",
    "natsort>=8.4.0",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pillow>=12.0.0",
    "polars>=1.34.0",
    "rasterio>=1.4.3",
    "scipy>=1.15.3",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]
